--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
     crossorigin="anonymous"></script> -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
-    crossorigin="anonymous"></script> --> -->
+    crossorigin="anonymous"></script> -->
 
 
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -117,7 +117,7 @@
     <!-- <script type='text/javascript' src="{% static 'node_modules/video.js/dist/video.js' %}"></script>
     <script type='text/javascript' src="{% static 'node_modules/videojs-logo/dist/videojs-logo.min.js' %}"></script>
 
-    <script type='text/javascript' src="{% static 'node_modules/videojs-contrib-quality-levels/dist/videojs-contrib-quality-levels.min.js' %}"></script> --> -->
+    <script type='text/javascript' src="{% static 'node_modules/videojs-contrib-quality-levels/dist/videojs-contrib-quality-levels.min.js' %}"></script> -->
 
     <!-- <script src="{% static 'node_modules/videojs-hls-quality-selector/dist/
     videojs-hls-quality-selector.min.js' %}"></script> -->
