--- a/templates/index.html
+++ b/templates/index.html
@@ -6,20 +6,20 @@
         <div class="col">
             <p>
             <h3>
-                Welcome to Remote University, a place where you can acquire new skills & share your knowledge with others.
+               Добро пожаловать в ваш Удаленный Университет, место где вы можете обмениваться знаниями и умениями с другими людьми
 
             </h3>
             </p>
 
             <p>
             <h3>
-                Be among our first instructors to post your lectures at Ruversity.
+               Приглашаем вас стать нашими лекторами и зарабатывать на своих знаниях и умениях.
             </h3>
             </p>
 
             <p>
             <h3>
-                Your files are stored at AWS which means they are available 99% of time & protected from downloading.
+                Ваши видеофайлы защищены системой DRM и предоставляются пользователям без возможности их сохранения на компьютер пользователя.
             </h3>
             </p>
 
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div> -->
-      
+    
        
     </div>
 </div>
