--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -6,18 +6,18 @@
 
     <div class="col-2 border rounded-pill text-center bg-light p-2 ">
         <a class='nav-link'
-            href="{% url 'list_software' %}">Software & IT</a></div>
+            href="{% url 'list_software' %}">Программирование и IT</a></div>
     <div class="col-1 border rounded-pill text-center bg-light p-2 "><a class='nav-link'
-            href="{% url 'list_arts' %}">Arts</a></div>
+            href="{% url 'list_arts' %}">Искусство</a></div>
     <div class="col-2 border rounded-pill text-center bg-light p-2  "><a class='nav-link'
-            href="{% url 'list_fitness' %}">Sports & Fitness</a></div>
+            href="{% url 'list_fitness' %}">Спорт и фитнесс</a></div>
     <div class="col-2 border rounded-pill text-center bg-light p-2"><a class='nav-link'
-            href="{% url 'list_personal' %}">Personal Development</a></div>
+            href="{% url 'list_personal' %}">Личностное развитие</a></div>
     <div class="col-2 border rounded-pill text-center bg-light p-2"><a class='nav-link'
-            href="{% url 'list_skills' %}">Domestic Skills</a></div>
+            href="{% url 'list_skills' %}">Домашние навыки</a></div>
     <div class="col-1 border rounded-pill text-center bg-light p-2 "><a class='nav-link'
-            href="{% url 'list_buisness' %}" >Business</a></div>
-    <div class="col-2 border rounded-pill text-center bg-light p-2 "><a class='nav-link' href="{% url 'list_fundamental' %}">Fundamental Science</a></div>
+            href="{% url 'list_buisness' %}" >Бизнес</a></div>
+    <div class="col-2 border rounded-pill text-center bg-light p-2 "><a class='nav-link' href="{% url 'list_fundamental' %}">Фундаментальные знания</a></div>
 </div>
     
     <div class="row">
