--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -8,32 +8,32 @@
   <div class="row m-auto">   
     <div class="col-2">
         <a class='nav-link' href="{% url 'contacts' %}">
-        <div class="text-dark text-center"><b>Contacts</b></div>
+        <div class="text-dark text-center"><b>Контакты</b></div>
         </a>
     </div>
        <div class="col-2">
         <a class='nav-link' href="{% url 'help' %}">
-          <div class="text-dark text-center"><b>Help</b></div>
+          <div class="text-dark text-center"><b>Помощь</b></div>
           </a>
         </div>
           <div class="col-2">
         <a class='nav-link' href="{% url 'termsofuse' %}">
-          <div class="text-dark text-center"><b>Terms of use</b></div>
+          <div class="text-dark text-center"><b>Условия использования</b></div>
           </a>
         </div>
           <div class="col-2">
         <a class='nav-link' href="{% url 'partnership' %}">
-        <div class="text-dark text-center "><b>Partnership</b></div>
+        <div class="text-dark text-center "><b>Партнерство</b></div>
         </a>
       </div>
         <div class="col-2">
         <a class='nav-link' href="{% url 'socialmedia' %}">
-        <div class="text-dark text-center"><b>We are in social medial</b></div>
+        <div class="text-dark text-center"><b>Мы в социальных сетях</b></div>
         </a>
         </div>
           <div class="col-2">
           <a class='nav-link' href="{% url 'career' %}">
-          <div class="text-dark text-center "><b>Career opportunities</b></div>
+          <div class="text-dark text-center "><b>Карьера с Ruversity.com</b></div>
           </a>
           </div>
         
