--- a/templates/workshop/create_new_subject.html
+++ b/templates/workshop/create_new_subject.html
@@ -10,7 +10,7 @@
 
             <div class="form-row">
                     <div class="col-3">
-                <label for="title">Title</label>
+                <label for="title">Название</label>
                     </div>
                     <div class="col ">
                 <input type="text" class='form-control' id="title" name="title" maxlength='50' required><br>
@@ -19,7 +19,7 @@
 
             <div class="form-row">
                 <div class="col-3">
-                    <label for="description" >Description</label>
+                    <label for="description" >Описание</label>
                 </div>
                 <div class="col">
                     <textarea class='form-control' id="description" rows='3' minlength='120' maxlength='180' name="description" required placeholder='Please, enter short description from 120 to 180 symbols'></textarea>
@@ -29,7 +29,7 @@
 
         <div class="form-row mt-4">
             <div class="col-3">
-                    <label for="prerequisite">Prerequisites</label>
+                    <label for="prerequisite">Необходимая подготовка</label>
                 </div>
                 <div class="col">
                     <textarea class='form-control' rows='3' id="prerequisite" minlength='120'  maxlength='180' minlength='150'name="prerequisite" required></textarea>
@@ -38,7 +38,7 @@
 
             <div class="form-row mt-4">
                 <div class="col-3">
-                <label for="thumbnail_file">Thumbnail</label>
+                <label for="thumbnail_file">Картинка</label>
             </div>
             <div class="col">
                 <p>
@@ -50,7 +50,7 @@
 
             <div class="form-row">
                 <div class="col-3">
-                <label for="category">Category</label>
+                <label for="category">Категория</label>
             </div>
             <div class="col">
                 <select name="category" id="category" class='form-control' required>
@@ -63,7 +63,7 @@
 
             <div class="form-row mt-4">
                 <div class="col-3">
-                <label for="language">Language</label>
+                <label for="language">Язык</label>
                 </div>
             <div class="col">
                 <select name="language" id="language" class='form-control' required >
@@ -79,7 +79,7 @@
             <div class="col">
                 <!-- <input type="submit" value="Create" class="btn btn-info btn-block"> -->
                 <!-- <button type='submit'>Load</button><br> -->
-                <input type="submit" value="Create" class="btn btn-sm btn-block btn-outline-dark">
+                <input type="submit" value="Создать" class="btn btn-sm btn-block btn-outline-dark">
             </div>
             </div>
             </form>
