--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -8,7 +8,7 @@
                 <!-- <div class="card-header bg-info text-white"> -->
                 <div class="card-header">
                     <h4>
-                        <i class="fas fa-user-plus"></i> Signup
+                        <i class="fas fa-user-plus"></i> Регистрационная форма
                     </h4>
                 </div>
                 <div class="card-body">
@@ -20,35 +20,35 @@
                     <form action="{% url 'register_user' %}" method='POST'>
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="first_name" class="text-black">First name</label>
+                            <label for="first_name" class="text-black">Имя</label>
                             <input type="text" name="first_name" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="last_name" class="text-black">Last name</label>
+                            <label for="last_name" class="text-black">Фамилия</label>
                             <input type="text" name="last_name" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="username" class="text-black">User name</label>
+                            <label for="username" class="text-black">Логин</label>
                             <input type="text" name="username" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="password" class="text-black">Password</label>
+                            <label for="password" class="text-black">Пароль</label>
                             <input type="password" name="password" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="password2" class="text-black">Confirm password</label>
+                            <label for="password2" class="text-black">Подтверждение пароля</label>
                             <input type="password" name="password2" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="email" class="text-black">Email</label>
+                            <label for="email" class="text-black">Электронная почта</label>
                             <input type="email" name="email" class="form-control" required>
                         </div>
 
-                            <input type="checkbox" id='custormer_type' name='customer_type' value='customer_type'> Check if your singing up as an entity <br><br>
+                            <input type="checkbox" id='custormer_type' name='customer_type' value='customer_type'> Поставьте галочку, если вы регистрируетесь как юридическое лицо <br><br>
 
                         <div>
                             <!-- <input type="submit" value="Submit" class="btn btn-info btn-block"> -->
-                            <input type="submit" value="Submit" class="btn btn-sm btn-outline-dark btn-block">
+                            <input type="submit" value="Отправить" class="btn btn-sm btn-outline-dark btn-block">
                         </div>
 
                     </form>
