--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -7,8 +7,8 @@
             <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
                 aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'edit_subject' subject.id %}">Edit Subject Page</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Edit Section Page</li>
+                    <li class="breadcrumb-item"><a href="{% url 'edit_subject' subject.id %}">Редактирование курса</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Редактирование раздела</li>
                 </ol>
             </nav>
         </div>
@@ -23,16 +23,16 @@
         <div class="form-row">
             <div class="col-3">
                 <label for="title">
-                    <h5>Edit Section Title</h5>
+                    <h5>Редактировать название раздела</h5>
                 </label>
-                <input class='form-control' type="text" id="title" name="title" placeholder="Section Title" required>
+                <input class='form-control' type="text" id="title" name="title" placeholder="Название раздела" required>
             </div>
     
             <div class="col-2 align-self-end">
                 <!-- <button type='submit' value="Create" class="btn btn-info btn-block"> -->
                 <!-- <input type="submit" value="Create" class="btn btn-info btn-block "> -->
-                <input type="submit" value="Edit" class='btn btn-sm btn-block btn-outline-dark'>
-                <input type="reset" value="Clear" class="btn btn-sm btn-block btn-outline-dark">
+                <input type="submit" value="Редактировать" class='btn btn-sm btn-block btn-outline-dark'>
+                <input type="reset" value="Очистить" class="btn btn-sm btn-block btn-outline-dark">
             </div>
         </div>
     </form>
@@ -40,7 +40,7 @@
     <div class="col">
         <a href="{% url 'delete_section' subject.id section.id %}">
             <!-- <input type="submit" value="Delete" class="btn btn-info btn-block"> -->
-            <input type="submit" value="Delete" class='btn btn-sm btn-block btn-outline-dark'>
+            <input type="submit" value="Удалить раздел" class='btn btn-sm btn-block btn-outline-dark'>
         </a>
     </div>
 </div>
@@ -50,7 +50,7 @@
                 <!-- =============Create New Lecture Box============================================ -->
                 <div class="col-11 border rounded m-auto">
                     <div class="row mt-3 border rounded bg-light text-center">
-                        <h5>Create new lecture</h5>
+                        <h5>Создать новую лекцию</h5>
                     </div>
                     <div class="row mt-2 pb-3 border rounded">
                         <form action="{% url 'create_new_lecture' subject.id section.id %}" method="POST" enctype="multipart/form-data">
@@ -59,26 +59,26 @@
                             <div class="form-row">
                                 <div class="col-3">
                                     <label for="title">
-                                        <h5>Add new lecture:</h5>
+                                        <h5>Добавить новую лекцию:</h5>
                                     </label>
-                                    <input class='form-control' type="text" id="title" name="title" placeholder="Lecture Title"
+                                    <input class='form-control' type="text" id="title" name="title" placeholder="Название лекции"
                                         required>
                                 </div>
                                 <div class="col-3">
                                     <label for="video_file">
-                                        <h5>Load new mp4 file:</h5>
+                                        <h5>Загрузить файл mp4:</h5>
                                     </label>
                                     <input type="file" class="form-control" id="video_file" name="video_file" required>
                                 </div>
                                 <div class="col-3">
                                     <label for="subtitle_file">
-                                        <h5>Load subtitiles:</h5>
+                                        <h5>Загрузить субтитры:</h5>
                                     </label>
                                     <input type="file" class="form-control" id="subtitle_file" name="subtitle_file">
                                 </div>
                                 <div class="col-3">
                                     <label for="subtitle_file">
-                                        <h5>Load translation:</h5>
+                                        <h5>Загрузить перевод:</h5>
                                     </label>
                                     <input type="file" class="form-control" id="translation_file" name="translation_file">
                                 </div>
@@ -87,14 +87,14 @@
                                     <input type="checkbox" id='free_access' class='form-check-input' name='free_access'
                                         value='free_access'>
                                     <label for="free_access" class='form-check-label'>
-                                        <h5>Check to grant free access</h5>
+                                        <h5>Отметьте, если это бесплатная лекция</h5>
                                     </label>
                                 </div>
                                 <div class="col-2 align-self-end">
                                     <!-- <button type='submit' value="Create" class="btn btn-info btn-block"> -->
                                     <!-- <input type="submit" value="Create" class="btn btn-info btn-block "> -->
-                                    <input type="submit" value="Create" class='btn btn-sm btn-block btn-outline-dark'>
-                                    <input type="reset" value="Clear" class="btn btn-sm btn-block btn-outline-dark">
+                                    <input type="submit" value="Создать" class='btn btn-sm btn-block btn-outline-dark'>
+                                    <input type="reset" value="Очистить" class="btn btn-sm btn-block btn-outline-dark">
                                 </div>
                             </div>
                     </div>
@@ -104,7 +104,7 @@
                 <!-- ====================Edit Lecture Box========================================== -->
                 <div class="col-11 border rounded m-auto">
                     <div class="row mt-3 border rounded bg-light text-center">
-                        <h5>Edit lectures</h5>
+                        <h5>Редактирование лекций</h5>
                     </div>
                 </div>
                 
@@ -119,7 +119,7 @@
                                 <div class="row">
                                     <div class="col p-2">
                                         {{lecture.title}}<br>
-                                        {{lecture.length}} min<br>
+                                        {{lecture.length}} мин<br>
                                         {{lecture.size_mb}} mb
                                     </div>
                                     <div class="col p-2">
@@ -139,12 +139,12 @@
                                 <form action="{% url 'edit_lecture' lecture.id %}" method="POST" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     <div class="form-row">
-                                        <input class='form-control' type="text" id="title" name="title" placeholder="Lecture Title"
+                                        <input class='form-control' type="text" id="title" name="title" placeholder="Название лекции"
                                             required>
                                     </div>
                                     <div class="form-row">
-                                        <label for="description">Add short description for the lecture:</label>
-                                        <textarea class='form-control mb-3' name="description" rows='2' id='description' required>
+                                        <label for="description">Введите краткое описание лекции:</label>
+                                        <textarea class='form-control mb-3' name="description" rows='2' id='description' required >
                                     </textarea>
                                         <input type="file" class="form-control" id="video_file" name="video_file" required>
                                     </div>
@@ -153,7 +153,7 @@
                             <div class="col-2 p-3 border rounded m-1">
                                 <div class="row m-1">
                                     <!-- <div class="col"><input type="submit" value="Edit" class="btn btn-info btn-block"></div> -->
-                                    <div class="col"><input type="submit" value="Edit" class='btn btn-sm btn-block btn-outline-dark'>
+                                    <div class="col"><input type="submit" value="Редактировать" class='btn btn-sm btn-block btn-outline-dark'>
                                     </div>
                                     </form>
                                 </div>
@@ -161,7 +161,7 @@
                                     <div class="col">
                                         <a href="{% url 'delete_lecture' lecture.id %}">
                                             <!-- <input type="submit" value="Delete" class="btn btn-info btn-block"> -->
-                                            <input type="submit" value="Delete" class='btn btn-sm btn-block btn-outline-dark'>
+                                            <input type="submit" value="Удалить" class='btn btn-sm btn-block btn-outline-dark'>
                                         </a>
                                     </div>
                                 </div>
