--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -44,7 +44,9 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-bottom">
     <div class="container">
       <div class="row m-auto">
-
+        <div class="m-0 text-center">
+          <img src={% static "images/PayKeeperLogo.png" %} alt="Image" width="300" height="200">
+        </div>
       <div class="m-0 text-center text-black">
         <i>Copyright &copy; ruversity.com 2021</i>
       </div>
