--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -93,7 +93,8 @@
     <div class="card-footer">  
                 <div class="col">
                     <div class="row mb-2">
-        <a href="{% url 'pay_pal' subject.id %}">
+        <!-- <a href="{% url 'pay_pal' subject.id %}" style="text-decoration:none"> -->
+        <a href="{% url 'credit_card' subject.id %}" style="text-decoration:none">
             <!-- <button type="button" name="button" class='btn btn-info btn-block'> -->
             <button type="button" name="button" class='btn btn-sm btn-block btn-outline-dark'>
                 Purchase
@@ -103,7 +104,7 @@
 
             {% if cart.user != request.user and cart.subject != subject %}
                     <div class="row">
-                <a href="{% url 'create_cart_item' subject.id %}">
+                <a href="{% url 'create_cart_item' subject.id %}"style="text-decoration:none" >
                     <!-- <button type="button" name="button" class='btn btn-info btn-block'> -->
                     <button type="button" name="button" class='btn btn-sm btn-block btn-outline-dark'>
                         Add to cart
