deleted settings from git

--- a/templates/contacts/contacts.html
+++ b/templates/contacts/contacts.html
@@ -1,14 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <div class="row p-2">
+    <div class="row m-auto p-2">
         <div class="col">
-            <p>Private Enterpreneur Vinokurov Egor<br>
-                6 Perronnaya st. Bor Nizegorodskaya oblast Russia 606460<br>
-                phone# +79200711112<br>
-                email: ruversity@gmail.com<br>
-                EIN: 526019188804
+            <div style="font-size: 1.5rem">Услуга предоставляется:</div>
+            <p>ООО РИТЕЙЛ<br>
+            ИНН 5257173237 <br>
+            КПП 525701001   <br>
+            ОГРН 1175275039400 <br>
+            ЮР АДРЕС: <br>
+            603002 НИЖНИЙ НОВГОРОД УЛ. КАНАВИНСКАЯ 2А ПОМЕЩЕНИЕ <br>
+            Банковские реквизиты: <br>
+            ТОЧКА ПАО БАНКА «ФК ОТКРЫТИЕ» <br>
+            БИК 044525999 <br>
+            КС 30101810845250000999 <br>
+            РС 40702810014500007297 <br>
             </p>
+            <div style="font-size: 1.2rem">Претензии и предложения принимаются на адрес:</div>
+            <p>79200711112@yandex.ru</p>
         
         </div>
     </div>
