--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -73,7 +73,7 @@
             </div>
         <div class="row"><div class="col"><strong>Timing: </strong>{{subject.length}} min</div></div>
         <div class="row">
-            <div class="col"><strong>Price: </strong> {{subject.price.discount}} USD</div>
+            <div class="col"><strong>Price: </strong> {{subject.price.discount}} руб.</div>
         </div>
     </div>
 
